fix speaking page column flex alignment, temp fix contact page links

--- a/src/pages/SpeakingPage/SpeakingPage.scss
+++ b/src/pages/SpeakingPage/SpeakingPage.scss
@@ -76,6 +76,7 @@
   &__entry {
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     gap: 1rem;
     text-align: center;
     margin: 2rem 0;
